--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,12 +14,20 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  opacity: 0.8;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Manrope Variable', sans-serif;
 }
 
 .overflow-scroll::-webkit-scrollbar {
