--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,6 +14,25 @@ body {
   flex: 1;
 }
 
+.authBackgroundImage,
+.authFormContainer {
+  width: 50%;
+}
+
 .footer {
   margin-top: auto;
+}
+
+@media (max-width: 1130px) {
+  .authContainer {
+    flex-direction: column-reverse;
+  }
+
+  .authBackgroundImage {
+    width: 100%;
+  }
+
+  .authFormContainer {
+    width: 100%;
+  }
 }
