--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,11 +37,12 @@ h6 {
 .overflow-scroll::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  background: #e2e8f0;
+  background: rgba(181, 181, 181, 0.6);
 }
 
 .overflow-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: lightgray;
+  background: rgba(181, 181, 181, 0.6);
+
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
