feat: can now add/edit description of a card

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,3 +46,31 @@ h6 {
 
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
+.ql-container.ql-bubble .ql-editor {
+  background: #605e5e;
+}
+
+.ql-container.ql-snow {
+  border-color: gray !important;
+}
+
+.ql-editor {
+  background: #201f1f;
+  min-height: 250px;
+}
+
+.ql-toolbar {
+  border-color: gray !important;
+  background: #201f1f;
+}
+
+.card-modal-content {
+  min-width: 740px;
+}
+
+@media (max-width: 768px) {
+  .card-modal-content {
+    min-width: 100%;
+  }
+}
