--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,10 @@ a:hover {
   opacity: 0.8;
 }
 
+.settingsLink {
+  font-weight: bold;
+}
+
 .react-calendar {
   background: #454545 !important;
   border: none;
