feat: add activities log page in settings

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,16 @@ h6 {
   min-width: 740px;
 }
 
+.settings-activity-container {
+  width: 960px;
+}
+
+@media (max-width: 1020px) {
+  .settings-activity-container {
+    width: 95%;
+  }
+}
+
 @media (max-width: 768px) {
   .card-modal-content {
     min-width: 100%;
